--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,3 +1,4 @@
+<!-- support math -->
 <script>
 window.MathJax = {
   tex: {
@@ -7,3 +8,6 @@ window.MathJax = {
 };
 </script>
 <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" async></script>
+
+<!-- add keywords -->
+<meta name="keywords" content="{{ site.keywords }}">
